--- a/content/post/2019-11-08-making-mape-more-meaningful.Rmd
+++ b/content/post/2019-11-08-making-mape-more-meaningful.Rmd
@@ -213,11 +213,11 @@ Credit goes to a former Sales Director (DC) for raising this issue.  When the mo
 **Weakness 4: An individual MAPE score is an unreliable indicator of forecasting methods**  
 Consider a situation where I forecast 50 cars to go past a marker in 30 minutes on a country road and 50 cars actually go past.  Does that mean that I have forecasted well?  Let’s say that 65 cars go past in the next 30 minutes compared to my forecast of 50, i.e. an error of 30%; has my forecasting method failed or am I just unlucky?
 
-A robust method for forecasting the number of cars on a country road may consider the following:  
+For instance, a robust method for forecasting the number of cars on a country road may consider the following:  
 
 * Historical data on the number of cars that pass.
 * Time of day.
-* Extenuating circumstances, such as school holidays or whether there is a local football match down the road.
+* Exceptional circumstances, such as school holidays or whether there is a local football match down the road.
 * The weather forecast.
 
 FMCG environments will see fluctuating MAPE result; for example, they may fluctuate between 25% and 35%.  Does a one-off MAPE result of, say, 35%, indicate that forecasting performed particularly poorly in that month (the wrong forecast for the wrong reasons) or was it the result of dumb, bad luck (the wrong forecast for the right reasons)?  My point is that a forecast accuracy measure that focuses only on the quantities and not methods or behaviours then fails to factor the random aspect of an outcome.
@@ -242,7 +242,7 @@ tibble(mape_int = seq(0.24, 0.36, 0.01)) %>%
 
 
 **Weakness 4a: It takes a number of cycles of MAPE to confidently judge forecasting methods**  
-Even with robust forecasting, some forecast error is likely.  I would take a number of forecast cycles to appreciate if the method was effective or whether the method included hidden flaws.
+Even with robust forecasting, some forecast error is likely.  It would take a number of forecast cycles to assess if the method was effective or whether the method included hidden flaws.
 
 In a commercial terms, one month’s MAPE score is not a good indicator of the integrity of the forecasting method - it may just be that the system was particularly lucky or unlucky.  Even 2 consecutive months of a particularly good or bad MAPE score shouldn’t lead to a confident inference that the forecasting method is performing well.
 
@@ -251,35 +251,39 @@ I recommend that demand planning reports these 3 forecasting performance measure
 
 1. *The forecast bias*, i.e. the fundamental forecast accuracy measure to underpin the total forecast’s credibility.
 2. *The demand planning behaviours score* that measures how well people follow and support the forecasting process.  This is discussed in my blog on [measuring demand planning behaviours](https://5050forecasting.netlify.com/2019/09/measuring-demand-planning-behaviours/){target="_blank"}.
-3. A **business specific forecast accuracy measure**, designed to measure the impact of the forecasting method on business performance.  This meaningful forecast accuracy measure ultimately should replace the MAPE score.  Suggested considerations such a measure are outlined in the next section, but it essentially reports the value that forecast accuracy is returning to the business.
+3. A **_business specific forecast accuracy impact measure_**, (FAIM) designed to measure the impact of the forecasting method on business performance and ideally replaces the MAPE score.  Suggested inputs to FAIM are outlined in the next section, but it essentially reports the value that forecast accuracy is returning to the business.
 
-**A business specific forecast accuracy should measure the impact on 4 areas of business impacts**  
-There are 4 major impacts on an FMCG business with forecast accuracy:  
+**A business specific FAIM should factor the impact on 4 areas of business**  
+There are 4 major areas of an FMCG business impacted of forecast accuracy:  
 
 1. Better planning and allocation of sales and marketing investments.
 2. Improved customer service and customer satisfaction through having the right stock in the right place at the right time.
-3. Reduction in safety stock / working capital.
-4. Reduction in logistical costs from warehousing and expediting.
+3. Reduced safety stock / working capital.
+4. Reduced logistical costs from warehousing and expediting.
 
-The ideal forecast accuracy measure is customised to factor the benefit or cost implication of forecast accuracy on each of these 4 aspects.  Ideally, the forecast accuracy measure also factors a range of horizons, weighted according to the importance of the forecast horizons to the size of the opportunity in these 4 aspects.
+The ideal FAIM is customised to factor the benefit or cost implication of forecast accuracy on each of these 4 aspects.  Ideally, the FAIM also factors a range of horizons, weighted according to the importance of the forecast horizons to the size of the opportunity in these 4 areas.
 
-Building such a forecast accuracy measure would be a significant undertaking, possibly involving cost accounting and almost certainly requiring broad assumptions and simplifications.  If such this progressive strategy was pursued, I recommend an iterative approach broadly outlined in [The Agile opportunity for Demand Planning Improvements](https://5050forecasting.netlify.com/2019/04/the-agile-opportunity-for-demand-planning-improvements/){target="_blank"}.
+Building such a forecast accuracy measure would be a significant undertaking, possibly involving cost accounting and almost certainly requiring broad assumptions and simplifications.  If this progressive strategy was pursued, I recommend an iterative approach broadly outlined in [The Agile opportunity for Demand Planning Improvements](https://5050forecasting.netlify.com/2019/04/the-agile-opportunity-for-demand-planning-improvements/){target="_blank"}. The key to sensibly developing this value-adding measure is building it in bite-sized chunks with regular feedback and review. 
 
-**When to apply the forecast accuracy measure**  
-Demand planning should report on the forecast accuracy measure at the end of each cycle in the same way as MAPE is traditionally reported.  As stated, this is demand planning’s opportunity to report on the value of the forecast accuracy supplied to the business.
+**When to apply FAIM**  
+Demand planning should report on the FAIM at the end of each cycle in the same way as MAPE is traditionally reported.  As stated, this is demand planning’s opportunity to report on the value of the forecast accuracy supplied to the business.
 
-The other main application for the forecast accuracy measure is in process design and method selection.  For instance, if the demand planning department is selecting or refining the forecasting method, I recommend a process the compares the customised forecast accuracy measure achieves over multiple forecast cycles.  With this approach, we can predict the expected outcome of adopting a new method with the added benefit that it reflects a range of forecast horizons.
+The other main application for the FAIM is in process design and method selection.  For instance, if the demand planning department is selecting or refining the forecasting method, I recommend a process the compares the FAIM achieved over multiple forecast cycles.  With this approach, we can predict the expected outcome of adopting a new method with the added benefit that it reflects a range of forecast horizons.
 
-An example application from my career comes from when a major milk processor was evaluating alternative methods to forecast the milk volumes produced by dairy farmers.  In this evaluation, data scientists applied a MAPE measure to determine which method added most value to the business.  At least in this instance, the MAPE was calculated over a range of forecast cycles, reducing the risk of dumb luck adversely affecting the outcome one way or the other.  However, given the huge capital investment for milk processing, a customised forecast accuracy measure could have enabled a better decision had it factored a range of lags along with the subsequent and substantial business costs of forecast errors over those lags.
+An example application from my career comes from when a major milk processor was evaluating alternative methods to forecast the milk volumes produced by dairy farmers.  In this evaluation, the data scientists applied a MAPE measure to determine which method added most value to the business.  At least in this instance, the MAPE was calculated over a range of forecast cycles, reducing the risk of dumb luck adversely affecting the outcome one way or the other.  However, given the huge capital investment for milk processing, a customised FAIM could have enabled a better decision had it factored a range of lags along with the subsequent and substantial business costs of forecast errors over those lags.
 
-**Business Benefits of a customised forecast accuracy measure**  
+**In short**  
+MAPE is easily the most frequently used measure of forecast accuracy in my direct experience, and it is often implicitly used to measure the performance of demand planning activities.  It's greatest strength is its simplicity, though it is a "blunt instrument" that comes with 4 major weaknesses.
 
-1. More meaningful score of the forecast accuracy.
-2. A forecast accuracy score that relates specifically to the business bottom line.
-3. Better insights to enable better business decisions around sales and marketing investments and even capital expenditure.
+I propose 2 measures to replace MAPE:  
 
-To manage expectations, a the customised forecast accuracy measure won’t *immediately* deliver better forecast accuracy compared to the simple MAPE measure.  However, it will indirectly lead to more accurate forecasts by:
+1. The demand planning behaviours score, to be assessed immediately after the demand planning cycle.
+2. A forecast accuracy impact measure (FAIM), which compares a range a forecast snapshots of actual sales and estimates the impact on forecast accuracy on a business stakeholders ranging from sales and marketing to supply.
 
-* Adding drive to improve forecasting behaviours by showing the true value of forecast accuracy.
-* Enabling better and more meaningful refinement of forecasting methods and processes but equipping demand planners to estimate the true benefit of different approaches.
+To manage expectations, a the customised FAIM won’t *immediately* deliver better forecast accuracy compared to the simple MAPE measure.  However, it will indirectly lead to more accurate forecasts by:  
+
+1. Providing a more meaningful score of the forecast accuracy, ideally relating it specifically to the business bottom line.
+2. Better insights to enable better business decisions around sales and marketing investments and even capital expenditure.
+3. Adding drive to improve forecasting behaviours by showing the true value of forecast accuracy.
+4. Enabling better and more meaningful refinement of forecasting methods and processes allowing demand planners to estimate the true benefit of different approaches.
 
