--- a/content/post/2020-01-20-boutique-forecasting-for-boutique-beer.Rmd
+++ b/content/post/2020-01-20-boutique-forecasting-for-boutique-beer.Rmd
@@ -40,8 +40,8 @@ library(lubridate)
 library(magrittr)
 
 ```
-## Introduction  
-Boutique brewery numbers have exploded in Australia in the past 2 decades.  In fact, the growth in demand for boutique brews had led to corporate brewing companies, CUB, Lion, Asahi and Coca Cola Amatil, to acquire and establish their own boutique beer brands.  Data taken from http://craftbeerreviewer.com/the-brewery-list/ shows that 701 boutique brewing brands operate around Australia.
+## Introduction
+Boutique brewery numbers have exploded in Australia in the past 2 decades.  So much so that the growth in demand for boutique brews has led to corporate brewing companies, CUB, Lion, Asahi and Coca Cola Amatil, to acquire and establish their own boutique beer brands.  Data taken from http://craftbeerreviewer.com/the-brewery-list/ shows that 701 boutique brewing brands now operate around Australia.
 
 ```{r brews_state, echo=FALSE}
 brews_state <-
@@ -83,7 +83,7 @@ Packaging beer into cans offer a range of advantages:
 * Unlike bottles, cans protect beer from ultraviolet light.  
 * Cans have environmental benefits over bottles as they are lighter, more space-efficient, more robust and more easily recycled.  
 
-Given my passion for forecasting, the growth in boutique breweries got me wondering about how I would proceed with forecasting beer production.
+Given my passion for forecasting, the growth in boutique breweries led me wondering about how I would proceed with forecasting beer production for a new brewery.
 
 ## Contributors to a good forecast
 One of the world’s leading experts on forecasting, Rob Hyndman, made this profound statement about statistical forecasting:
@@ -94,26 +94,38 @@ One of the world’s leading experts on forecasting, Rob Hyndman, made this prof
 > * *Secondly, there should be lots of data available. *  
 > * *Thirdly, the forecast shouldn’t affect the thing you’re trying to forecast. *  
 > * *Four, they should be a relatively low natural, unexplainable random variation. *  
-> * *And fifth, the future should be somehow similar to the past."*  ^1^
+> * *And fifth, the future should be somehow similar to the past."*^[Quote from Rob Hyndman taken from\n
+https://www2.monash.edu/impact/podcasts/thought-capital/forecasts-are-always-wrong-but-we-need-them-anyway/]
 
 The more of these characteristics present when forecasting, the greater the value of statistical forecasting.  If fewer are available, forecasters should revert to “judgemental” forecasting, i.e. forecasting by intuition and pragmatism rather than through statistical modelling.
 
-Interestingly, a new boutique brewery presents challenges for Rob Hyndman’s criteria:  
-
+Interestingly, a new boutique brewery presents challenges for Rob Hyndman’s criteria:
+  
 
 ```{r table2, echo=FALSE, message=FALSE, warnings=FALSE, results='asis'}
 hyndman_crit_eval <- 
-"
-|ID |Criteria |Boutique Brewery Context|
-|-|-------------|-------------|
-|1|Understanding of contributing factors|Moderate. We’re likely to know many but not all|
-|2|Lots of data|Usually no but, in some cases, yes|
-|3|Forecast does not drive outcome|Correct, so long as the forecast is not constraining raw materials supply.|
-|4|Low natural, unexplainable random variation|Probably not though this is insignificant compared to the limited available data|
-|5|Future is similar to the past|Probably though this is insignificant compared to the limited available data|
+  tribble(
+    ~ID, ~Criteria, ~`Boutique Brewery Context`,
+    "1", "Understanding of contributing factors", "Moderate. We’re likely to know many but not all",
+    "2", "Lots of data", "Usually no, but, in some cases, yes",
+    "3", "Forecast does not drive outcome", "Correct, so long as the forecast is not constraining raw materials supply.",
+    "4", "Low natural, unexplainable random variation", "Probably not though this is insignificant compared to the limited available data",
+    "5", "Future is similar to the past", "Probably though this is insignificant compared to the limited available data"
+  )
 
-"
-cat(hyndman_crit_eval) # output the table in a format good for HTML/PDF/docx conversion
+hyndman_crit_eval %>% 
+  knitr::kable(., caption = "Applying Hyndman's criteria to boutique beer forecasting")
+# "
+# |ID |Criteria |Boutique Brewery Context|
+# |-|-------------|-------------|
+# |1|Understanding of contributing factors|Moderate. We’re likely to know many but not all|
+# |2|Lots of data|Usually no, but, in some cases, yes|
+# |3|Forecast does not drive outcome|Correct, so long as the forecast is not constraining raw materials supply.|
+# |4|Low natural, unexplainable random variation|Probably not though this is insignificant compared to the limited available data|
+# |5|Future is similar to the past|Probably though this is insignificant compared to the limited available data|
+# 
+# "
+# cat(hyndman_crit_eval) # output the table in a format good for HTML/PDF/docx conversion
 ```
 
 Based on a review of Hyndman’s criteria, we’re likely to have to introduce a reasonable level of judgement in generating forecast for our boutique brewer. Funnily enough, two quite valid approaches to forecasting a boutique brewery are also starkly contrasting: bottom-up and meta-data driven.
@@ -136,10 +148,14 @@ How many outlets are the products currently sold (i.e. the product distribution)
 **Marketing plans**  
 What is the sales pipeline?  How many prospects exist?  What is the threat to existing outlets from competitor products?
 
-**Cash-flow constraints**  
+**Cash-flow**  
 Many businesses with outstanding products are constrained by cash flow, i.e. the limited flow of cash from customers and consumers in turn limits the ability to procure raw materials, employ staff and develop the sales pipe-line.  If the cash-flow has potential to constrain beer sales, estimate the planned cash-flow and potential vulnerabilities.
 
-To forecast using a bottom-up method, start with this process:
+To forecast using a bottom-up method, start with this process:  
+
+---
+
+![Process for bottom up forecasting method](/post/2020-01-20-boutique-forecasting-for-boutique-beer_files/Bottom-up forecasting flow.png)
 
 1. Collaborate with the boutique brewery and discuss high-level capacity estimates for each of these potential constraints.  Identify the potential bottlenecks in the value-chain.  
 2. For the potential bottlenecks, develop more detailed capacity estimates along with a reasonable range of capacities.  For instance, a reasonable estimate for the brewing capacity may be a throughput of between 1500L and 3000L per week, with a most likely throughput of 2000L.  
@@ -147,6 +163,12 @@ To forecast using a bottom-up method, start with this process:
 4. Develop a network of nodes representing the value-chain where each node of the network represents a potential bottleneck.  The inputs for each node represent the outcome of upstream bottlenecks, which in-turn drives the outcome of that node, as per step 3.  
 5. Model this in Excel, similar to the [NPD method](../../../2019/06/new-approach-to-new-product-forecasting/){target="_blank"} suggested in my earlier post.  
 6. As events unfold, stay close to the boutique brewer, review the consensus achieved in steps 1-3 and update the model with the updated insights and new assumptions.  
+
+---
+
+![Example network of potential bottlenecks in beer value chain](/post/2020-01-20-boutique-forecasting-for-boutique-beer_files/Beer forecast scenarios v2.png)
+
+---
 
 Note that this method is a simplified Markov Chain Monte Carlo (MCMC) approach.  The beauty of this approach is that even Excel is capable of handling this model in simple cases, as shown by the earlier post.
 
@@ -207,8 +229,4 @@ This article suggests 2 approaches to forecasting a boutique brewery and address
 
 Which method works best depends entirely on the circumstances.  Above all else, there is no substitute for developing a close, collaborative relationship with the brewery, both at the start of the business and then ongoing.  Collaborative relationships will not only result in better assumptions and better forecasts, but better risk mitigation and better outcomes.
 
-
----
-
-^1^ Quote from Rob Hyndman taken from  
-https://www2.monash.edu/impact/podcasts/thought-capital/forecasts-are-always-wrong-but-we-need-them-anyway/
+^[Top image: ID 128968370 © Vladimirs Poplavskis | Dreamstime.com]
